| along with this program; if not, write to the Free Software               |
| Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA |
+---------------------------------------------------------------------------+

+---------------------------+
| Release Max v0.3.32-alpha |
+---------------------------+

2007-02-12  Maintenance Bug         Fixed #123 - Infinite loop in lib/max/Dal/Maintenance.php (Marek)
2007-02-12  Maintenance Bug         Fixed #121 - Undefined index SERVER_NAME when invoking maintenance script
                                    (Marek)
2007-02-12  General     Bug         Fixed #24 - lib/max/DaySpan.php: PHP Warning: Call-time pass-by-reference
                                    deprecated (Marek)
2007-02-12  Admin       Bug         Fixed #74 - Make all drop-down lists sort the same way (Marek)
2007-02-12  Delivery    Bug         Fixed #4 - Invocation code for popups generating double comment close
                                    (Marek)
2007-02-12  Admin       Bug         Fixed #59 - Restored russian, turkish and hebrew translations (Marek)
2007-02-02  Admin       Bug         Fixed #131 - Simulator doesn't correctly deal with banners served in
                                    different zones (Matteo)
2007-02-02  Admin       Bug         Fixed #119 - Capping and blocking do not work if impression logging is
                                    turned off (Matteo)
2007-02-02  Admin       Bug         Fixed #101 - ID's missing from URLs in advertiser-index (Chris)
2007-02-01  Admin       Bug         Fixed #104 - JavaScript error in various settings pages (Chris)
2007-02-01  Admin       Bug         Fixed #103 - SWF files become uncompressed by the SWF converter (Chris)
2007-02-01  Admin       Bug         Fixed #102 - SWF converter broken with FTP stored files (>8kb) (Chris)
2007-02-01  Maintenance Bug         Fixed #100 - Time targeting for high priority banners not working (Chris)